--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Vamos a montar una tienda de ropa con un catálogo de productos y un dashboard para el administrador. Los productos se guardarán en una base de datos de mongo en Atlas. Podemos usar como referencia el pdf [web_ejemplo.pdf](web_ejemplo.pdf) que contiene un ejemplo de cómo podría ser la interfaz de la tienda y el dashboard.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "nodemon index.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +19,7 @@
   "homepage": "https://github.com/soniamartinezz/backend-project-break#readme",
   "dependencies": {
     "axios": "1.6.7",
+    "body-parser": "1.20.2",
     "dotenv": "16.4.5",
     "express": "4.18.2",
     "jest": "29.7.0",
