--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "4.18.2",
     "jest": "29.7.0",
     "mongoose": "8.2.0",
-    "nodemon": "3.1.0"
+    "nodemon": "3.1.0",
+    "npm": "^10.4.0"
   }
 }
