--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "body-parser": "1.20.2",
     "dotenv": "16.4.5",
     "express": "4.18.2",
+    "express-session": "1.18.0",
+    "firebase": "10.8.0",
     "jest": "29.7.0",
     "mongoose": "8.2.0",
     "nodemon": "3.1.0",
-    "npm": "^10.4.0"
+    "npm": "10.4.0"
   }
 }
