--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "16.4.5",
     "express": "4.18.2",
+    "jest": "29.7.0",
     "mongoose": "8.2.0"
   },
   "devDependencies": {
