--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "1.18.0",
     "firebase": "10.8.0",
     "jest": "29.7.0",
+    "method-override": "^3.0.0",
     "mongoose": "8.2.0",
     "nodemon": "3.1.0",
     "npm": "10.4.0"
