--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "buil": "^0.0.0",
+    "buildpack": "^0.0.1",
     "dotenv": "16.4.5",
     "express": "4.18.2",
     "mongoose": "8.2.0"
