--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "mongoose": "8.2.0",
     "nodemon": "3.1.0",
     "npm": "10.4.0",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "5.0.0"
   }
 }
